# SummaBrowse

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_factory.py  gunicorn.conf.py  gunicorn_config.py  image_processor.py  manifest.json  pdf_processor.py  popup.html  popup.js  process_pdf.py  process_video.py  pyproject.toml  render.yaml  requirements.txt  style.css  styles.css  summarization_utils.py  text_extraction_and_summarization.py  utils.py  video_processor.py
templates/: index.html
